istio-learning-YAML/virtual-service/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-one
  namespace: vs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-one
  template:
    metadata:
      labels:
        app: server-one
    spec:
      containers:
      - name: nginx
        image: aaqibshaikh199/istio-learning:VIRTUAL-SERVICE-01
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-two
  namespace: vs-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-two
  template:
    metadata:
      labels:
        app: server-two
    spec:
      containers:
      - name: nginx
        image: aaqibshaikh199/istio-learning:VIRTUAL-SERVICE-02
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: server-one
  namespace: vs-demo
spec:
  selector:
    app: server-one
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: server-two
  namespace: vs-demo
spec:
  selector:
    app: server-two
  ports:
    - name: http
      port: 80
      targetPort: 80
