istio-learning-YAML/virtual-service/three-deployment.yaml
#DEPLOYMENT 03
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first
  namespace: three
  labels:
    app: container-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: container-one
  template:
    metadata:
      labels:
        app: container-one
    spec:
      containers:
        - name: container-one
          image: aaqibshaikh199/istio-learning:CONTAINER-01
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: first-service
  namespace: three
spec:
  type: ClusterIP
  selector:
    app: container-one
  ports:
    - name: http
      port: 80
      targetPort: 8080
