istio-learning-YAML/virtual-service/virtual-service.yaml
#VIRTUAL SERVICE
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice-for-one
  namespace: one
spec:
  hosts:
  - service-one.one.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /ip
    route:
    - destination:
        host: service-one.one.svc.cluster.local
